--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,16 @@
 	<artifactId>simple</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<build>
+		<defaultGoal>clean package</defaultGoal>
+	</build>
+
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<version.j2ee>7.0</version.j2ee>
 		<version.org.jboss.arquillian>1.1.13.Final</version.org.jboss.arquillian>
 		<version.org.wildfly>8.2.1.Final</version.org.wildfly>
 		<version.junit>4.12</version.junit>
@@ -32,7 +38,7 @@
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>7.0</version>
+			<version>${version.j2ee}</version>
 			<scope>provided</scope>
 		</dependency>
 
